--- a/package.json
+++ b/package.json
@@ -11,16 +11,20 @@
     },
     "devDependencies": {
         "axios": "^0.19",
-        "bootstrap": "^4.0.0",
+        "bootstrap": "^4.4.1",
         "cross-env": "^7.0",
         "jquery": "^3.2",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.13",
         "popper.js": "^1.12",
         "resolve-url-loader": "2.3.1",
-        "sass": "^1.20.1",
+        "sass": "^1.26.2",
         "sass-loader": "7.*",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10"
+    },
+    "dependencies": {
+        "aos": "^3.0.0-beta.6",
+        "simplebar": "^5.1.0"
     }
 }
