--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
-        "aos": "^3.0.0-beta.6",
-        "simplebar": "^5.1.0"
+        "@fortawesome/fontawesome-free": "^5.12.1",
+        "aos": "^3.0.0-beta.6"
     }
 }
