--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.12.1",
-        "aos": "^3.0.0-beta.6"
+        "aos": "^3.0.0-beta.6",
+        "particles.js": "^2.0.0"
     }
 }
