--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "africastalking/africastalking": "^2.3",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
+        "laravel/passport": "^8.4",
         "laravel/tinker": "^2.0"
     },
     "require-dev": {
