--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.12.1",
+        "animate.css": "^3.7.2",
         "aos": "^3.0.0-beta.6",
         "sweetalert2": "^9.10.0",
         "vue-router": "^3.1.6",
