--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "aos": "^3.0.0-beta.6",
         "sweetalert2": "^9.10.0",
         "vue-router": "^3.1.6",
-        "vue-sweetalert2": "^3.0.3"
+        "vue-sweetalert2": "^3.0.3",
+        "vuex": "^3.4.0"
     }
 }
